<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_history">

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.final_main.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.final_main.ui.gallery.GalleryFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_gallery"
        />

    <fragment
        android:id="@+id/nav_contactus"
        android:name="com.example.final_main.ui.slideshow.SlideshowFragment"
        android:label="@string/contact_us"
        tools:layout="@layout/fragment_slideshow" />
</navigation>